# ChameleonRT

./: .gitignore  CMakeLists.txt  README.md  VulkanStabilityTest.ps1  clean_rebuild.ps1  imgui.ini  main.cpp  slangdisplay.cpp
.github/: copilot-instructions-slang-integration.md  copilot-instructions.md
Migration/: BUILD_COMMANDS.md  COMPATIBILITY_ANALYSIS.md  CURRENT_STATUS.md  DESCRIPTOR_ALIGNMENT.md  EXTRACTION_COMPLETE.md  INTEGRATION_GUIDE.md  LEARNINGS.md  MIGRATION_PLAN.md  PERFORMANCE_CONSIDERATIONS.md  QUICK_BUILD_REFERENCE.md  README.md  STATUS.md  USING_COPILOT_CHAT.md
Migration/DXR Integration/: DXR_ARCHITECTURE_DIAGRAM.md  DXR_DOCS_INDEX.md  DXR_INTEGRATION_SUMMARY.md  DXR_INTEGRATION_TARGET_FILES.md  DXR_QUICK_REFERENCE.md  QUESTIONS_ANSWERED.md  RUNTIME_QUICKSTART.md
Migration/SlangIntegration/: PLANNING_SESSION_SUMMARY.md  Phase2A_GlobalBuffers_Plan.md  Phase2B_UnifiedSlangShaders_Plan.md  SLANG_INTEGRATION_ROADMAP.md
Migration/SlangIntegration/Archive/Phase2A_FailedAttempts/: 2A.2.0_DECISION.md  2A.2.0_Option_C_Summary.md  2A.2.1_Shader_Update_COMPLETE.md  2A.2.3_Global_Buffer_Creation_COMPLETE.md  2A.2.4_Descriptor_Heap_Update_COMPLETE.md  2A.2.5_Root_Signature_Update_COMPLETE.md  2A.2_Progress_Status_Analysis.md  CRITICAL_GPU_Hang_Analysis.md  QUICK_REFERENCE_Option_C.md  QUICK_START.md  SUMMARY.md  Safe_Testing_Protocol.md
Migration/SlangIntegration/GlobalBufferRefactor/: README.md
Migration/SlangIntegration/GlobalBufferRefactor/CPU/: PLAN.md  Validation_Complete.md
Migration/SlangIntegration/GlobalBufferRefactor/Concepts/: D3D12_Resource_Binding.md
Migration/SlangIntegration/GlobalBufferRefactor/DXR/: BLAS_STRATEGY.md  COMPLETION_REPORT.md  FRESH_START_PLAN.md  PLAN.md  QUICK_REFERENCE.md  TECHNICAL_NOTES.md
Migration/SlangIntegration/GlobalBufferRefactor/DXR/Completion/: ARCHITECTURE_DIAGRAM.md  GIT_COMMIT_SUMMARY.md  PHASE1_CONSOLIDATED_COMPLETE.md  PHASE1_QUICK_REFERENCE.md  README.md
Migration/SlangIntegration/GlobalBufferRefactor/Vulkan/: PLAN.md  PLAN_OLD.md
Migration/SlangIntegration/Phase2A_Analysis/: 2A.0.1_Scene_Loading_Analysis.md  2A.0.2_DXR_Buffer_Analysis.md  2A.0.3_Vulkan_Buffer_Analysis.md  2A.1.4_CPU_Test_Results.md  2A.1.4_Sponza_Validation_Summary.md  Files_To_Modify.md  Phase_2A.1_COMPLETE.md  README.md
Migration/SlangIntegration/Phase2A_Prompts/: INDEX.md  Phase_2A.0_Preparation_Analysis.md  Phase_2A.1_CPU_Scene_Refactor.md  Phase_2A.2_DXR_Backend_Refactor.md  Phase_2A.3_Vulkan_Backend_Refactor.md  Phase_2A.4_Final_Validation.md  README.md
Migration/SlangIntegration/SlangShaders/: INDEX.md
Migration/SlangIntegration/SlangShaders/Phase0_UtilityUpgrade/: PLAN.md  README.md  REFLECTION_EXAMPLES.md  REFLECTION_PROPOSAL.md
Migration/SlangIntegration/SlangShaders/Phase1_FlatShading/: PLAN.md  README.md
Migration/SlangIntegration/SlangShaders/Phase2_Textures/: PLAN.md  README.md
Migration/SlangIntegration/SlangShaders/Phase3_FullBRDF/: PLAN.md  README.md
Migration/prompts/: 01-cmake-setup.md  02-dxr-integration-runtime.md  02-dxr-integration.md  03-vulkan-integration-BUILD-TIME-OLD.md  03-vulkan-integration-runtime.md  04-first-slang-shader.md  05-debugging-common.md  06-validation-review.md  README.md
Migration/reference/: DXR_VULKAN_PIPELINE_COMPARISON.md  FALCOR_BINDING_ANALYSIS.md  backends_CMakeLists.txt  clean_rebuild.ps1  integration_notes.txt  root_CMakeLists.txt  slang_CMakeLists.txt
Migration/util/: slang_shader_compiler.cpp  slang_shader_compiler.h
backends/: CMakeLists.txt
backends/dxr/: CMakeLists.txt  dx12_utils.cpp  dx12_utils.h  dxr_utils.cpp  render_dxr.cpp  render_dxr.h  render_dxr.hlsl  render_dxr.slang  simple_lambertian.hlsl  util.slang
backends/dxr/cmake/: SlangDxil.cmake  bin_to_header.cmake
backends/dxr/hlsl/: render_dxr.hlsl
backends/slang/: CMakeLists.txt  SlangImGuiRenderer.cpp  SlangImGuiRenderer.h  render_slang.cpp  render_slang.h  render_slang_flat.slang  render_slang_plugin.cpp  slang_test.cpp  slangdisplay.cpp  slangdisplay.h  slangdisplay_new.cpp
backends/slang/cmake/: FindSlang.cmake
backends/slang/shaders/: triangle_shader.slang  validation_d3d12.slang  validation_pulse.slang  validation_rainbow.slang  validation_shader.slang
backends/vulkan/: CMakeLists.txt  hit.rchit  imgui_impl_vulkan.cpp  raygen.rgen  render_vulkan.cpp  render_vulkan.h  vkdisplay.cpp  vulkan_utils.cpp  vulkan_utils.h
cmake/: FindSlang.cmake  oidn.cmake  sdl2.cmake  slang.cmake
docs/: IBL_Implementation_Plan.md  IBL_Index.md  IBL_Phase0_Prerequisites.md  IBL_Phase1_BasicDisplay.md  IBL_Phase2_UniformSampling.md  IBL_Phase3_ImportanceSampling.md  IBL_Planning_Summary.md  IBL_Quick_Reference.md  IBL_README.md  OIDN_INTEGRATION_PLAN.md  PHASE1_BUFFER_CONVERSION.md  PHASE2_AUXILIARY_BUFFERS.md  PHASE3_OIDN_INTEGRATION.md  PHASE4_TONEMAP_PASS.md  Rendering_Pipeline.md  ray-tracing-implementation-plan.md  vulkan-stability-investigation.md
docs/imgui-implementation-plans/: README.md  github-copilot-usage-guide.md  plan-a-unified-slang.md  plan-b-falcor-approach.md  shader-validation-detour.md  vulkan-stability-analysis.md
shaders/: CMakeLists.txt  minimal_rt.slang  minimal_rt_vulkan.slang  test_compilation_only.slang  test_phase3_modules.slang  tonemap.slang  unified_render.slang
shaders/cmake/: SlangDxil.cmake  bin_to_header.cmake
shaders/modules/: disney_bsdf.slang  environment_sampling.slang  lcg_rng.slang  lights.slang  util.slang
util/: CMakeLists.txt  arcball_camera.cpp  arcball_camera.h  environment_sampling.cpp  environment_sampling.h  material.h  mesh.h  scene.cpp  scene.h  slang_shader_compiler.cpp  slang_shader_compiler.h  util.cpp  util.h
